[package]
name = "isola"
version = "0.1.0"
authors = ["snpefk <snpefk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version ="1.0.132", features = ["derive"] }
serde_json = "1.0.73"
futures = "0.3.19"

termion = "1.5.6"
tui = "0.16.0"
